<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PresenceManager</string>
    
    <string name="tf_title">座席タグの発行</string>
    <string name="tf_please_tag">タグを翳してください</string>
    <string name="tf_writing">タグ発行中---</string>
    <string name="tf_c_write">タグを初期化する</string>
    <string name="tf_reflesh">更新</string>
    <string name="tf_msg_write">タグをかざしてください</string>
    <string name="tf_msg_failed">発行に失敗しました</string>
    <string name="tf_msg_complete">発行完了！</string>
    <string name="tf_msg_unsupport_tag">タグには、NTAG203を利用してください。</string>
    <string name="tf_msg_got_tag">書き込み準備ができました</string>
    <string name="tf_msg_com_error">通信を確認してください</string>
    <string name="tf_msg_comm">データ通信中</string>
    <string name="tf_msg_please_login">再ログインが必要です。</string>
    <string name="tf_menu_reload">部屋リスト更新</string>
    
    <string name="c_button">button</string>
    <string name="c_ok">OK</string>
    <string name="c_cancel">Cancel</string>
    
    <string name="msg_comm_get">データ取得中……</string>
    <string name="msg_comm_error">データ取得に失敗しました</string>
    <string name="msg_comm_complete">更新が完了しました</string>
    
    <string name="lo_menu_tag">座席タグの発行</string>
    <string name="lo_menu_config">初期設定</string>
    <string name="lo_menu_logout">ログアウト</string>
    <string name="lo_c_seminar_header">参加中</string>
    <string name="lo_c_venue">会場</string>
    <string name="lo_c_seat">座席</string>
    <string name="lo_c_account">ログイン中</string>
    <string name="lo_c_date">期間</string>
    <string name="lo_c_description">詳細</string>
    <string name="lo_c_event">セミナータグ発行</string>
    <string name="lo_c_log">出席履歴</string>
    <string name="lo_msg_please_touch">もう一度タッチしてください</string>
    <string name="lo_msg_invalid_tag">出席用タグではありません。</string>
    <string name="lo_msg_login_failed">ログインに失敗しました</string>
    <string name="lo_msg_login_complete">ログインが完了しました</string>
    <string name="lo_msg_ask_logout">ログアウトしてもよろしいですか？</string>
    <string name="lo_alt_sign_in_twitter">Twitterでログインする</string>
    
    <string name="at_c_venue">会場</string>
    <string name="at_c_seat">座席番号</string>
    <string name="at_c_event">イベント</string>
    <string name="at_c_date">日時</string>
    <string name="at_c_detail">詳細</string>
    <string name="at_c_attend">出席</string>
    <string name="at_msg_no_seminar">現在、この会場で開催中のイベントはありません</string>
    <string name="at_msg_comm_error">データ取得に失敗しました。もう一度タッチしてください。</string>
    <string name="at_msg_please_login">再ログインが必要です。</string>
    <string name="at_msg_attend_complete">出席処理が完了しました</string>
    <string name="at_msg_exec_attend">出席処理中……</string>
    <string name="at_msg_please_touch">もう一度NFCタグにタッチしてください。</string>
    <string name="at_msg_invalid_tag">タグの情報が破損しています。管理者に連絡してください</string>
    
    <string name="cf_c_host">HOST[:PORT]</string>
    
    <string name="ms_title">主催中のセミナー</string>
    <string name="ms_c_reload">セミナーリスト更新</string>
    <string name="ms_msg_no_seminar">主催中のセミナーはありません</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_log">出席履歴</string>
   
    <string name="nf_title">NFCタグの発行</string>
    <string name="nf_c_intro">タグにタッチしてください</string>
    
</resources>